<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/main" android:checkableBehavior="single">
        <item
            android:id="@+id/nav_main"
            android:icon="@drawable/ic_nav_main"
            android:title="@string/nav_menu_main"
            android:checked="true"/>
        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/ic_nav_tools"
            android:title="@string/nav_menu_tools"/>
        <item
            android:id="@+id/nav_programmes"
            android:icon="@drawable/ic_nav_programmes"
            android:title="@string/nav_menu_programmes"/>
        <item
            android:id="@+id/nav_goods"
            android:icon="@drawable/ic_nav_goods"
            android:title="@string/nav_menu_goods"/>
        <item
            android:id="@+id/nav_stats"
            android:icon="@drawable/ic_nav_stats"
            android:title="@string/nav_menu_stats"/>
        <item
            android:id="@+id/nav_app"
            android:icon="@drawable/ic_nav_app"
            android:title="@string/nav_menu_apps"/>
    </group>

    <group android:id="@+id/other" android:checkableBehavior="single">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_nav_settings"
            android:title="@string/nav_menu_settings"/>
        <item
            android:id="@+id/nav_exit"
            android:icon="@drawable/ic_nav_exit"
            android:title="@string/nav_menu_exit"
            android:checkable="false"/>
    </group>

</menu>
